fix: menu z-index 추가

--- a/src/layouts/AppLayout/components/Header/Header.module.css
+++ b/src/layouts/AppLayout/components/Header/Header.module.css
@@ -58,6 +58,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
 .menu-content {
